# audiodecoder.ssf

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.ssf/: addon.xml  addon.xml.in
audiodecoder.ssf/resources/language/resource.language.af_za/: strings.po
audiodecoder.ssf/resources/language/resource.language.am_et/: strings.po
audiodecoder.ssf/resources/language/resource.language.ar_sa/: strings.po
audiodecoder.ssf/resources/language/resource.language.ast_es/: strings.po
audiodecoder.ssf/resources/language/resource.language.az_az/: strings.po
audiodecoder.ssf/resources/language/resource.language.be_by/: strings.po
audiodecoder.ssf/resources/language/resource.language.bg_bg/: strings.po
audiodecoder.ssf/resources/language/resource.language.bs_ba/: strings.po
audiodecoder.ssf/resources/language/resource.language.ca_es/: strings.po
audiodecoder.ssf/resources/language/resource.language.cs_cz/: strings.po
audiodecoder.ssf/resources/language/resource.language.cy_gb/: strings.po
audiodecoder.ssf/resources/language/resource.language.da_dk/: strings.po
audiodecoder.ssf/resources/language/resource.language.de_de/: strings.po
audiodecoder.ssf/resources/language/resource.language.el_gr/: strings.po
audiodecoder.ssf/resources/language/resource.language.en_au/: strings.po
audiodecoder.ssf/resources/language/resource.language.en_gb/: strings.po
audiodecoder.ssf/resources/language/resource.language.en_nz/: strings.po
audiodecoder.ssf/resources/language/resource.language.en_us/: strings.po
audiodecoder.ssf/resources/language/resource.language.eo/: strings.po
audiodecoder.ssf/resources/language/resource.language.es_ar/: strings.po
audiodecoder.ssf/resources/language/resource.language.es_es/: strings.po
audiodecoder.ssf/resources/language/resource.language.es_mx/: strings.po
audiodecoder.ssf/resources/language/resource.language.et_ee/: strings.po
audiodecoder.ssf/resources/language/resource.language.eu_es/: strings.po
audiodecoder.ssf/resources/language/resource.language.fa_af/: strings.po
audiodecoder.ssf/resources/language/resource.language.fi_fi/: strings.po
debian/: changelog.in  control  copyright  rules
lib/: kodi-Highly_Theoretical-note.txt
lib/Highly_Theoretical/: CMakeLists.txt
lib/Highly_Theoretical/Core/: yam.c
src/: CircularBuffer.h  SSFCodec.cpp  SSFCodec.h
(+54 files in other folders)
